mvp1-proyect done

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -41,7 +41,7 @@
     <script src="scripts/hamButton.js" defer></script>
     <script src="scripts/activePage.js" defer></script>
     <script src="scripts/trackVisit.js" defer></script>
-    <script src="scripts/lazyLoadImages.js" defer></script>
+    <script src="scripts/loadImages.js" defer></script>
   </head>
   <body>
     <div class="container">
