--- a/chamber/index.html
+++ b/chamber/index.html
@@ -1,161 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="The Córdoba Chamber of Commerce connects businesses in Córdoba, Argentina, providing support, networking, and resources to promote economic growth and community development. Discover initiatives, services, and events for entrepreneurs, businesses, and investors in Córdoba's thriving commercial landscape."
-    />
-    <title>
-      Córdoba Chamber of Commerce - Business Development & Networking in
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="The Córdoba Chamber of Commerce connects businesses in Córdoba, Argentina, providing support, networking, and resources to promote economic growth and community development. Discover initiatives, services, and events for entrepreneurs, businesses, and investors in Córdoba's thriving commercial landscape.">
+        <title>
+            Córdoba Chamber of Commerce - Business Development & Networking in
       Argentina
-    </title>
-    <meta name="robots" content="index, follow" />
-    <meta name="author" content="Martin Detlefsen" />
-    <meta
-      property="og:title"
-      content="WDD 231 Course Home Page - Student Martin Detlefsen"
-    />
-    <meta property="og:type" content="website">
-    <meta
-      property="og:image"
-      content="https://mdetlefsen77.github.io/wdd231/chamber/images/icon.png"
-    />
-    <meta
-      property="og:url"
-      content="https://mdetlefsen77.github.io/wdd231/chamber/home.html"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./styles/reset.css" />
-    <link rel="stylesheet" href="./styles/normalize.css" />
-    <link rel="stylesheet" href="./styles/chamber-short.css" />
-    <link rel="stylesheet" href="./styles/chamber-large.css" />
-    <link rel="icon" href="./favicon.ico" />
-    <script src="./scripts/members-utils.js" type="module"></script>
-    <script src="./scripts/members-sum.js" type="module"></script>
-    <script src="scripts/footerDetails.js" defer></script>
-    <script src="scripts/hamButton.js" defer></script>
-    <script src="scripts/activePage.js" defer></script>
-    <script src="scripts/weatherApi.js" defer></script>
-  </head>
-
-  <body>
-    <div class="container">
-      <header>
-        <img
-          src="images/icon.png"
-          alt="Cordoba Chamber of Commerce"
-          width="120"
-          loading="lazy"
-        />
-        <div class="header_left">
-          <h1>Cordoba</h1>
-          <p>Chamber of Commerce</p>
+        </title>
+        <meta name="robots" content="index, follow">
+        <meta name="author" content="Martin Detlefsen">
+        <meta property="og:title" content="WDD 231 Course Home Page - Student Martin Detlefsen">
+        <meta property="og:type" content="website">
+        <meta property="og:image" content="https://mdetlefsen77.github.io/wdd231/chamber/images/icon.png">
+        <meta property="og:url" content="https://mdetlefsen77.github.io/wdd231/chamber/home.html">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="./styles/reset.css">
+        <link rel="stylesheet" href="./styles/normalize.css">
+        <link rel="stylesheet" href="./styles/chamber-short.css">
+        <link rel="stylesheet" href="./styles/chamber-large.css">
+        <link rel="icon" href="./favicon.ico">
+        <script src="./scripts/members-utils.js" type="module"></script>
+        <script src="./scripts/members-sum.js" type="module"></script>
+        <script src="scripts/footerDetails.js" defer></script>
+        <script src="scripts/hamButton.js" defer></script>
+        <script src="scripts/activePage.js" defer></script>
+        <script src="scripts/weatherApi.js" defer></script>
+        <script src="scripts/loadImages.js"></script>
+    </head>
+    <body>
+        <div class="container">
+            <header>
+                <img
+                    src="images/icon.png"
+                    alt="Cordoba Chamber of Commerce"
+                    width="120"
+                    loading="lazy"
+                >
+                <div class="header_left">
+                    <h1>Cordoba</h1>
+                    <p>Chamber of Commerce</p>
+                </div>
+                <div class="header_right">
+                    <a id="menu" href="#"></a>
+                    <nav class="navigation">
+                        <a href="index.html">Home</a>
+                        <a href="directory.html" class="active">Directory</a>
+                        <a href="join.html">Join</a>
+                        <a href="discover.html">Discover</a>
+                    </nav>
+                </div>
+            </header>
+            <main class="main-container">
+                <div class="hero">
+                    <picture>
+                        <source media="(min-width: 1000px)" srcset="images/hero-large.webp">
+                        <source media="(min-width: 640px)" srcset="images/hero-medium.webp">
+                        <img
+                            src="images/hero-small.webp"
+                            alt="Waves crashing on the shore"
+                            width="400"
+                            height="300"
+                        >
+                    </picture>
+                    <a href="join.html">Join Us</a>
+                </div>
+                <h2 class="home-title">Home</h2>
+                <div class="events-weather">
+                    <div>
+                        <h3>Events</h3>
+                        <div>
+                            <p>There's no events planned yet. Please, come back later</p>
+                        </div>
+                    </div>
+                    <div>
+                        <h3>Current Weather</h3>
+                        <div id="current-weather">
+                            <p>No data available</p>
+                        </div>
+                    </div>
+                    <div>
+                        <h3>Weather Cast</h3>
+                        <div id="weather-cast">
+                            <p>No data available</p>
+                        </div>
+                    </div>
+                </div>
+                <div id="business-sum"></div>
+            </main>
+            <footer>
+                <section class="address-info">
+                    <p>
+                        <b>Cordoba Chamber of Commerce</b>
+                    </p>
+                    <p>10 Rue De La Paix</p>
+                    <p>Cordoba, Street 444</p>
+                    <p>info@cordobacc.org</p>
+                    <p>(0351) 888-0802</p>
+                </section>
+                <section class="social-media">
+                    <a href="https://youtube.com">
+                        <img
+                            src="./images/youtube.svg"
+                            loading="lazy"
+                            alt="Youtube Icon"
+                            width="50"
+                            height="50"
+                        >
+                    </a>
+                    <a href="https://twitter.com">
+                        <img
+                            src="./images/twitter.svg"
+                            loading="lazy"
+                            alt="Twitter Icon"
+                            width="50"
+                            height="50"
+                        >
+                    </a>
+                    <a href="https://linkedin.com">
+                        <img
+                            src="./images/linkedin.svg"
+                            loading="lazy"
+                            alt="LinkedIn Icon"
+                            width="50"
+                            height="50"
+                        >
+                    </a>
+                </section>
+                <section class="student-info">
+                    <p>WDD231 Class Project</p>
+                    <p>Martin Detlefsen</p>
+                    <p>©️
+                        <span id="currentyear"></span> Cordoba Chamber of Commerce
+                    </p>
+                    <p>Last Modified
+                        <span id="lastModified"></span>
+                    </p>
+                </section>
+            </footer>
         </div>
-        <div class="header_right">
-          <a id="menu" href="#"></a>
-          <nav class="navigation">
-            <a href="index.html">Home</a>
-            <a href="directory.html" class="active">Directory</a>
-            <a href="join.html">Join</a>
-            <a href="discover.html">Discover</a>
-          </nav>
-        </div>
-      </header>
-      <main class="main-container">
-        <div class="hero">
-          <picture>
-            <source
-              media="(min-width: 1000px)"
-              srcset="images/hero-large.webp"
-            />
-            <source
-              media="(min-width: 640px)"
-              srcset="images/hero-medium.webp"
-            />
-            <img
-              src="images/hero-small.webp"
-              alt="Waves crashing on the shore"
-              width="400"
-              height="300"
-            />
-          </picture>
-          <a href="join.html">Join Us</a>
-        </div>
-
-        <h2 class="home-title">Home</h2>
-
-        <div class="events-weather">
-          <div>
-            <h3>Events</h3>
-            <div>
-              <p>There's no events planned yet. Please, come back later</p>
-            </div>
-          </div>
-
-          <div>
-            <h3>Current Weather</h3>
-            <div id="current-weather">
-              <p>No data available</p>
-            </div>
-          </div>
-
-          <div>
-            <h3>Weather Cast</h3>
-            <div id="weather-cast">
-              <p>No data available</p>
-            </div>
-          </div>
-        </div>
-        <div id="business-sum"></div>
-      </main>
-      <footer>
-        <section class="address-info">
-          <p><b>Cordoba Chamber of Commerce</b></p>
-          <p>10 Rue De La Paix</p>
-          <p>Cordoba, Street 444</p>
-          <p>info@cordobacc.org</p>
-          <p>(0351) 888-0802</p>
-        </section>
-        <section class="social-media">
-          <a href="https://youtube.com"
-            ><img
-              src="./images/youtube.svg"
-              loading="lazy"
-              alt="Youtube Icon"
-              width="50"
-              height="50"
-          /></a>
-          <a href="https://twitter.com"
-            ><img
-              src="./images/twitter.svg"
-              loading="lazy"
-              alt="Twitter Icon"
-              width="50"
-              height="50"
-          /></a>
-          <a href="https://linkedin.com"
-            ><img
-              src="./images/linkedin.svg"
-              loading="lazy"
-              alt="LinkedIn Icon"
-              width="50"
-              height="50"
-          /></a>
-        </section>
-        <section class="student-info">
-          <p>WDD231 Class Project</p>
-          <p>Martin Detlefsen</p>
-          <p>©️ <span id="currentyear"></span> Cordoba Chamber of Commerce</p>
-          <p>Last Modified <span id="lastModified"></span></p>
-        </section>
-      </footer>
-    </div>
-  </body>
+    </body>
 </html>
