--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -69,25 +69,32 @@
                         <h3>Demographic Information of Córdoba</h3>
                         <ul>
                             <li>
-                                <b>Capital</b>: Córdoba
+                                <b>Capital</b>
+                                : Córdoba
                             </li>
                             <li>
-                                <b>Province</b>: Córdoba
+                                <b>Province</b>
+                                : Córdoba
                             </li>
                             <li>
-                                <b>Area</b>: 165,321 km²
+                                <b>Area</b>
+                                : 165,321 km²
                             </li>
                             <li>
-                                <b>Population (2023)</b>: Approximately 3.7 million
+                                <b>Population (2023)</b>
+                                : Approximately 3.7 million
                             </li>
                             <li>
-                                <b>Official language</b>: Spanish
+                                <b>Official language</b>
+                                : Spanish
                             </li>
                             <li>
-                                <b>Currency</b>: Argentine Peso (ARS)
+                                <b>Currency</b>
+                                : Argentine Peso (ARS)
                             </li>
                             <li>
-                                <b>Time zone</b>: UTC -3
+                                <b>Time zone</b>
+                                : UTC -3
                             </li>
                             <li>
                                 <b>Economy</b>
@@ -185,37 +192,37 @@
                         <!-- Example gallery with images -->
                         <img
                             class="lazy-load"
-                            src="images/audrius-sutkus-N2KIkLWuwvQ-unsplash.webp"
+                            src="images/audrius-sutkus-N2KIkLWuwvQ-unsplash 11zon.webp"
                             alt="Local Attraction 1"
                             loading="lazy"
                         >
                         <img
                             class="lazy-load"
-                            src="images/erik-mclean-ox72sUdwbEA-unsplash.webp"
+                            src="images/erik-mclean-ox72sUdwbEA-unsplash (1)_11zon.webp"
                             alt="Local Attraction 2"
                             loading="lazy"
                         >
                         <img
                             class="lazy-load"
-                            src="images/international-student-navigator-australia-lKcmbML4Qv8-unsplash.webp"
+                            src="images/international-student-navigator-australia-lKcmbML4Qv8-unsplash11zon.webp"
                             alt="Local Attraction 3"
                             loading="lazy"
                         >
                         <img
                             class="lazy-load"
-                            src="images/taro-ohtani-Dx2M7o6SnUE-unsplash.webp"
+                            src="images/taro-ohtani-Dx2M7o6SnUE-unsplash (1)_11zon.webp"
                             alt="Local Attraction 4"
                             loading="lazy"
                         >
                         <img
                             class="lazy-load"
-                            src="images/international-student-navigator-australia-oVsibQpPj1Y-unsplash.webp"
+                            src="images/international-student-navigator-australia-oVsibQpPj1Y-unsplash 11zon.webp"
                             alt="Local Attraction 5"
                             loading="lazy"
                         >
                         <img
                             class="lazy-load"
-                            src="images/jeffrey-thumann-FK7EfvXMoMU-unsplash.webp"
+                            src="images/jeffrey-thumann-FK7EfvXMoMU-unsplash 11zon.webp"
                             alt="Local Attraction 6"
                             loading="lazy"
                         >
@@ -264,10 +271,13 @@
                 <section class="student-info">
                     <p>WDD231 Class Project</p>
                     <p>Martin Detlefsen</p>
-                    <p>©️
-                        <span id="currentyear"></span> Cordoba Chamber of Commerce
+                    <p>
+                        ©️
+                        <span id="currentyear"></span>
+                        Cordoba Chamber of Commerce
                     </p>
-                    <p>Last Modified
+                    <p>
+                        Last Modified
                         <span id="lastModified"></span>
                     </p>
                 </section>
