fix de imagenes

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -192,13 +192,13 @@
                         <!-- Example gallery with images -->
                         <img
                             class="lazy-load"
-                            src="images/audrius-sutkus-N2KIkLWuwvQ-unsplash 11zon.webp"
+                            src="images/audrius-sutkus-N2KIkLWuwvQ-unsplash.webp"
                             alt="Local Attraction 1"
                             loading="lazy"
                         >
                         <img
                             class="lazy-load"
-                            src="images/erik-mclean-ox72sUdwbEA-unsplash (1)_11zon.webp"
+                            src="images/erik-mclean-ox72sUdwbEA-unsplash.webp"
                             alt="Local Attraction 2"
                             loading="lazy"
                         >
@@ -210,19 +210,19 @@
                         >
                         <img
                             class="lazy-load"
-                            src="images/taro-ohtani-Dx2M7o6SnUE-unsplash (1)_11zon.webp"
+                            src="images/taro-ohtani-Dx2M7o6SnUE-unsplash.webp"
                             alt="Local Attraction 4"
                             loading="lazy"
                         >
                         <img
                             class="lazy-load"
-                            src="images/international-student-navigator-australia-oVsibQpPj1Y-unsplash 11zon.webp"
+                            src="images/international-student-navigator-australia-oVsibQpPj1Y-unsplash.webp"
                             alt="Local Attraction 5"
                             loading="lazy"
                         >
                         <img
                             class="lazy-load"
-                            src="images/jeffrey-thumann-FK7EfvXMoMU-unsplash 11zon.webp"
+                            src="images/jeffrey-thumann-FK7EfvXMoMU-unsplash.webp"
                             alt="Local Attraction 6"
                             loading="lazy"
                         >
