fixes already done

--- a/project/index.html
+++ b/project/index.html
@@ -56,9 +56,7 @@
                 <div class="hero-text">
                     <h1>Discover Your Next Adventure</h1>
                     <p>Explore the best travel destinations, tips, and stories for every budget and occasion.</p>
-                    <a href="tips.html">
-                        <button class="cta-button">See Our Tips</button>
-                    </a>
+                    <button class="cta-button" onclick="location.href='tips.html';">See Our Tips</button>
                 </div>
             </section>
             <section class="featured">
@@ -81,9 +79,9 @@
                 <section class="categories">
                     <h2>Categories</h2>
                     <div class="category-grid"></div>
-                    <a href="contact.html">
-                        <button class="cta-button-categories">Share yout tip!</button>
-                    </a>
+                    <button class="cta-button-categories" onclick="location.href='contact.html';">
+                        Share your tip!
+                    </button>
                 </section>
             </div>
         </main>
